--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,17 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="./db.js"></script>
   <script src="index.js"></script>
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('serviceWorker.js').then(reg => {
+          console.log('Service worker file found!', reg);
+        });
+      });
+    }
+  </script>
+
 </body>
 </html>
